--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-magicians",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sharon-odhiambo.github.io/math-magicians/",
+  "homepage": "https://sharon-odhiambo.github.io/Math-magicians/home",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
